--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright notice.
+	Adding changes before rebasing conflict.
 -->
 <head>
 	<title>An Example Website</title>
