--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!--
 	Copyright notice.
-	Some silly changes from master branch
 -->
 <head>
 	<title>Silly Changes on Master</title>
@@ -16,7 +15,7 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk Filler Content -->
+	<!-- Content Goes Here -->
 		<p>
 			Just stuff for now,
 			Not sure if we should replace this or not
