--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
-	Copyright notice.
+	Copyright 2014 Git. Training
 -->
 <head>
-	<title>Silly Changes on Master</title>
+	<title>Lots of Trouble, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
